k8s/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: voiture
spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
